# pfm

./: .env.test  .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  test.py
agents/: default_agent.py
tests/: test_sparlq_tool.py
tools/: calculator.py  graph_questions.yaml  instructions.md  spendcast.py
